# gProZubi

./: .gitignore  .gitmodules  .gprozubi.glade.un~  CMakeLists.txt  Makefile.am  compile_commands.json  configure.ac  configure.in  gprozubi.glade  gprozubi.glade.bak  gprozubi.gladep.bak
src/: Calendar.c  Calendar.h  ComboBox.c  ComboBox.h  Makefile.am  Nomenklatura.c  Nomenklatura.h  TextEdit.c  TextEdit.h  Xray.c  Xray.h  YDConnect.cc  ZubFormula.c  ZubFormula.h  callbacks.c  callbacks.h  casesEdit.h  casesList.h  configFile.h  doctorList.h  helpers.h  interface.c  interface.c.bak  interface.h  main.c  menu.h  nomenklaturaLis.h  openfile.h  patientEdit.h  patientList.h  planLecheniya.h  pricesList.h
